# MEXsrfdcrPy

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
paper/: paper.bib  paper.html  paper.md
src/MEXsrfdcrPy/: __init__.py  core.py  global.py  grid.py  loso.py  metrics.py  pipeline.py
tests/: test_grid.py  test_import.py  test_imports.py  test_loso.py  test_metrics.py  test_pipeline.py  test_smoke.py
