[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MEXsrfdcrPy"
version = "0.1.0"
description = "Spatial Random Forest for Daily Climate Records Reconstruction in Mexico"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Hugo Antonio-Fernández"}]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
  "tqdm>=4.65",
  "pyarrow>=12"
]

[project.urls]
Homepage = "https://github.com/sasoryhaf91/MEXsrfdcrPy"
Issues   = "https://github.com/sasoryhaf91/MEXsrfdcrPy/issues"

[tool.setuptools.packages.find]
where = ["src"]
